<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.AboutApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_about_app"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:layout_gravity="center" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/txt_desc_about_app" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_what_is_in_it"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:layout_gravity="center" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/txt_desc_what_is_in_it" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_main_feature"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:layout_gravity="center" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/scan" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/txt_ai_scanning"
            android:textStyle="italic"
            android:textSize="25sp"
            android:gravity="center"
            tools:layout_gravity="center" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/txt_desc_main_feature" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/berkebunplus"
            android:textSize="25sp"
            android:fontFamily="@font/plusjakartasans_extrabold"
            android:gravity="center"
            tools:layout_gravity="center"
            app:drawableTopCompat="@drawable/iconapp"/>

    </LinearLayout>

</ScrollView>