<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.berkebunplus.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_diagnosis"
        android:name="com.capstone.berkebunplus.ui.diagnosis.DiagnosisFragment"
        android:label="@string/title_diagnosis"
        tools:layout="@layout/fragment_diagnosis" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.berkebunplus.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_aboutApp"
            app:destination="@id/aboutApp" />
    </fragment>
    <fragment
        android:id="@+id/aboutApp"
        android:name="com.capstone.berkebunplus.ui.profile.AboutApp"
        android:label="fragment_about_app"
        tools:layout="@layout/fragment_about_app" />
</navigation>