<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resultscan.ResultScanActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/iv_diagnosis_result_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_sample_disease"
                android:contentDescription="@string/codes_result_image_scan"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                android:foreground="@drawable/shadow_overlay" />

            <ImageButton
                android:id="@+id/btn_back_result"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_arrow_back_ios"
                android:background="@null"
                android:scaleType="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/codes_arrow_back_result_activity" />

            <TextView
                style="@style/TextContent.TitleMedium"
                android:text="@string/txt_result_plant_name"
                android:fontFamily="@font/plusjakartasans_lightitalic"
                android:layout_marginBottom="56dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="start|bottom"/>

            <TextView
                android:id="@+id/tv_result_plant_name"
                style="@style/TextContent.TitleLarge"
                android:text="@string/txt_result_scan_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/plusjakartasans_bold"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="start|bottom"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_stroke"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_healthcare_outline"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/codes_symptoms" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextContent.TitleLarge"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_result_scan_diseaseId"
                        android:fontFamily="@font/plusjakartasans_bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_result_diagnosis_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_result_scan_list_symptoms"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        android:fontFamily="@font/plusjakartasans_bold"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextContent.HeadingMedium"
                    android:layout_marginStart="0dp"
                    android:layout_marginVertical="10dp"
                    android:drawablePadding="8dp"
                    android:text="@string/txt_heading_diagnosis_description"
                    android:fontFamily="@font/plusjakartasans_bold"
                    app:drawableStartCompat="@drawable/ic_mingcute_warning_line"/>

                <TextView
                    android:id="@+id/tv_diagnosis_description"
                    style="@style/TextContent.BodyMedium"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txt_result_scan_lorem" />

                <TextView
                    style="@style/TextContent.HeadingMedium"
                    android:layout_marginStart="0dp"
                    android:layout_marginVertical="10dp"
                    android:drawablePadding="8dp"
                    android:text="@string/txt_heading_treatment"
                    android:fontFamily="@font/plusjakartasans_bold"
                    app:drawableStartCompat="@drawable/ic_hugeicons_treatment" />

                <TextView
                    android:id="@+id/tv_diagnosis_treatment"
                    style="@style/TextContent.BodyMedium"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txt_result_scan_lorem" />

                <TextView
                    style="@style/TextContent.HeadingMedium"
                    android:layout_marginStart="0dp"
                    android:layout_marginVertical="10dp"
                    android:drawablePadding="8dp"
                    android:text="@string/txt_heading_medicine_recommendation"
                    android:fontFamily="@font/plusjakartasans_bold"
                    app:drawableStartCompat="@drawable/ic_hugeicons_medicine_syrup"/>

                <TextView
                    android:id="@+id/tv_medicine_recommendation"
                    style="@style/TextContent.BodyMedium"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txt_result_scan_lorem" />

                <Button
                    android:id="@+id/btn_add_to_favorite"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/txt_button_add_to_favorite"
                    android:fontFamily="@font/plusjakartasans_bold"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
