<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="12dp"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_diagnosis_item"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/codes_result_image_scan" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:src="@drawable/ic_bookmark"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/savedItems" />

        <TextView
            android:id="@+id/tv_diagnosis_plant_name_item"
            style="@style/TextContent.BodySmall"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:padding="7dp"
            android:textColor="@color/white"
            android:text="@string/txt_result_scan_name"
            android:fontFamily="@font/plusjakartasans_semibolditalic"
            android:background="@drawable/bg_circle_strong_cyan"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_diagnosisId_item"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_diagnosisId_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:maxLines="2"
            android:text="@string/txt_result_scan_symptoms"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/plusjakartasans_bold"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_diagnosis_item"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tv_diagnosis_plant_name_item" />

        <TextView
            android:id="@+id/tv_diagnosis_description_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginVertical="15dp"
            android:layout_marginEnd="15dp"
            android:maxLines="3"
            android:text="@string/txt_result_scan_lorem"
            android:textSize="16sp"
            android:fontFamily="@font/plusjakartasans_light"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tv_diagnosisId_item"
            card_view:layout_constraintTop_toBottomOf="@id/iv_diagnosis_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>